--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h2>Hello World</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Melissa Arroyo | Kansas City Web Designer, Developer, Marketer</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9af593fbcc.js"></script>
+
+    <!-- Open Graph Data -->
+    <meta property="og:url" content="https://melarroyo.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="👩🏻‍💻 Melissa: Digital Marketing, Front End Development" />
+    <meta property="og:description" content="Creative web development and digital marketing services for your organization. Get in touch!" />
+    <meta property="og:image" content="https://www.melarroyo.com/img/preview.png" />
+
+    <!-- Twitter Card Data -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="👩🏻‍💻 Melissa: Digital Marketing, Front End Development" />
+    <meta name="twitter:description" content="Creative web development and digital marketing services for your organization. Get in touch!" />
+    <meta name="twitter:url" content="https://melarroyo.com/" />
+    <meta name="twitter:image" content="https://www.melarroyo.com/img/preview.png" />
+</head>
+<!-- BEGIN BODY -->
+
+<body>
+    <main>
+        <!-- Intentionally Blank -->
+    </main>
+    <script src="scripts.js"></script>
+</body>
+<!-- END BODY -->
+
+</html>
