--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9af593fbcc.js"></script>
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
     <!-- Open Graph Data -->
     <meta property="og:url" content="https://melarroyo.com/" />
     <meta property="og:type" content="website" />
