setting up homepage structure

--- a/index.html
+++ b/index.html
@@ -30,16 +30,36 @@
     <meta name="twitter:image" content="https://www.melarroyo.com/img/preview.png" />
 </head>
 <!-- BEGIN BODY -->
-
 <body>
+    <nav>
+        <div>
+            <img src="" alt=""></img>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="">Work</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </nav>
     <main>
-        <h1>
-            <span>Welcome To</span>
-            My Website!
-        </h1>
+        <div>
+            header
+        </div>
+        <div>
+            work
+        </div>
+        <div>
+            about
+        </div>
+        <footer>
+            <span>Made by Me</span>
+        </footer>
     </main>
     <script src="scripts.js"></script>
 </body>
 <!-- END BODY -->
-
 </html>
