--- a/index.html
+++ b/index.html
@@ -32,22 +32,42 @@
 <!-- BEGIN BODY -->
 <body>
     <nav>
-        <div>
-            <img src="" alt=""></img>
-        </div>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="">Work</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="container d-flex flex-row justify-content-between align-items-center">
+            <div>
+                <img class="Nav_logoImg" src="/img/header-logo.jpeg" alt="Logo"></img>
+            </div>
+            <div>
+                <nav>
+                    <ul class="Nav_navList">
+                        <li><a href="">Work</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </nav>
     <main>
-        <div>
-            header
+        <div class="Hero_Wrapper">
+            <div class="Hero_wrapperContent">
+                <h1 class="d-flex flex-column">
+                    Your Vision
+                    <span>is aligned with my mission</span>
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <ul>
+                    <li><a href="">LinkedIn</a></li>
+                    <li><a href="">Github</a></li>
+                    <li><a href="">Codepen</a></li>
+                    <li><a href="">Email</a></li>
+                </ul>
+            </div>
+            <div>
+                <img>
+                <img>
+            </div>
         </div>
         <div>
             work
