worked on hero section

--- a/index.html
+++ b/index.html
@@ -48,28 +48,36 @@
         </div>
     </nav>
     <main>
-        <div class="Hero_Wrapper">
-            <div class="Hero_wrapperContent">
-                <h1 class="d-flex flex-column">
-                    Your Vision
-                    <span>is aligned with my mission</span>
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <ul>
-                    <li><a href="">LinkedIn</a></li>
-                    <li><a href="">Github</a></li>
-                    <li><a href="">Codepen</a></li>
-                    <li><a href="">Email</a></li>
-                </ul>
-            </div>
-            <div>
-                <img>
-                <img>
+        <div class="Hero_Section">
+            <div class="container">
+                <div class="Hero_Wrapper row">
+                    <div class="Hero_WrapperContent col-lg-6">
+                        <div class="Hero_Content">
+                            <h1 class="d-flex flex-column">
+                                Your Vision
+                                <span>is aligned with my mission</span>
+                            </h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                            <ul class="Hero_IconsList list-unstyled">
+                                <li><a href="">LinkedIn</a></li>
+                                <li><a href="">Github</a></li>
+                                <li><a href="">Codepen</a></li>
+                                <li><a href="">Email</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="Hero_MediaWrapper col-lg-6">
+                        <div class="ImageWrapper">
+                            <img src="https://images.pexels.com/photos/1181472/pexels-photo-1181472.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                            <img src="https://images.pexels.com/photos/3762941/pexels-photo-3762941.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div>
+        <div class="Work_Section">
             work
         </div>
         <div>
