--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Melissa Arroyo | Kansas City Web Designer, Developer, Marketer</title>
+    <title>Melissa Arroyo | Kansas City Web Designer and Front-End Developer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <meta charset="utf-8" />
@@ -31,10 +31,7 @@
 <!-- BEGIN BODY -->
 <body>
     <nav>
-        <div class="container d-flex flex-row justify-content-between align-items-center">
-            <div>
-                <img class="Nav_logoImg" src="/img/header-logo.jpeg" alt="Logo"></img>
-            </div>
+        <div class="container d-flex flex-row justify-content-end align-items-center">
             <div>
                 <ul class="Nav_navList">
                     <li><a href="#work">Work</a></li>
@@ -44,58 +41,42 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div class="Hero_Section">
-            <div class="container">
-                <div class="Hero_Wrapper row">
-                    <div class="Hero_WrapperContent col-lg-6">
-                        <div class="Hero_Content">
-                            <h1 class="d-flex flex-row flex-wrap">
-                                Let&apos;s Make It
-                                <span>&nbsp;Happen</span>
-                            </h1>
-                            <p>
-                                Welcome to my page! I'm a KC-based Front End Developer with 5 years of experience in web design, digital marketing, and building websites for various audiences. Learn more about me and get connected!
-                            </p>
-                            <ul class="Hero_IconsList list-unstyled">
-                                <li><a href="">View Past Work</a></li>
-                                <li><a href="">Connect on LinkedIn</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="Hero_MediaWrapper col-lg-6">
-                        <div class="ImageWrapper">
-                            <img src="https://images.pexels.com/photos/1181472/pexels-photo-1181472.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-                            <img src="https://images.pexels.com/photos/3762941/pexels-photo-3762941.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-                        </div>
-                    </div>
-                </div>
+    <main class="col-12 d-flex flex-column flex-lg-row">
+        <aside class="Aside_section p-5">
+            <div class="w-100 d-flex justify-content-center">
+                <img class="Aside_logoImg" src="/img/header-logo.jpeg" alt="Logo"></img>
+            </div>
+            <div class="Aside_content">
+                <h1>Melissa<span>Arroyo</span></h1>
+                <p>Wed Designer | Front End Developer</p>
+                <p>A collection of my work in Web Design, Web Development, and Content Creation</p>
+                <ul class="list-unstyled">
+                    <li>
+                      <a href="https://www.linkedin.com/in/arroyo-melissa/" target="_blank">
+                        Connect with me! <span>LI logo</span>
+                      </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/meliarr" target="_blank">
+                            Github <span>GH logo</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
+        <div id="work" class="Work_Section p-1 p-md-5">
+            <div class="Work_SectionGrid">
+                <div class="Work_SectionCard card-shpekc">SHPE KC</div>
+                <div class="Work_SectionCard card-srks">SUSAN</div>
+                <div class="Work_SectionCard card-trinity">Trinity</div>
+                <div class="Work_SectionCard card-reframe">ReFrame Financial</div>
+                <div class="Work_SectionCard card-cudlipp">Cuddlip Financial</div>
             </div>
         </div>
-        <div id="work" class="Work_Section py-5">
-            <div class="container">
-                <div class="text-center">
-                    <h1>Portfolio<span>Gallery</span></h1>
-                    <p>A collection of my work in Web Design, Web Development, and Content Creation</p>
-                </div>
-                <div class="Work_SectionList">
-                    <div>SHPE KC</div>
-                    <div>SUSAN</div>
-                    <div>KC Women in Tech</div>
-                    <div>ReFrame Financial</div>
-                </div>
-            </div>
-        </div>
-        <div id="about" class="About_Section py-5">
-            about
-            <div id="contact">
-                contact me!
-            </div>
-        </div>
-        <footer class="Footer_Section py-2">
-            <span>Website footer. Made by Me</span>
-        </footer>
     </main>
+    <footer class="Footer_Section py-2">
+        <span>Website footer. Made by Me</span>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 <!-- END BODY -->
