swapped project photos, added font

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/frn1vgw.css">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -17,14 +15,14 @@
     <!-- Open Graph Data -->
     <meta property="og:url" content="https://melarroyo.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="👩🏻‍💻 Melissa: Digital Marketing, Front End Development" />
-    <meta property="og:description" content="Creative web development and digital marketing services for your organization. Get in touch!" />
+    <meta property="og:title" content="👩🏻‍💻 Melissa Arroyo | Front End Developer" />
+    <meta property="og:description" content="Web designer and Front End Developer in Kansas City" />
     <meta property="og:image" content="https://www.melarroyo.com/img/preview.png" />
 
     <!-- Twitter Card Data -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="👩🏻‍💻 Melissa: Digital Marketing, Front End Development" />
-    <meta name="twitter:description" content="Creative web development and digital marketing services for your organization. Get in touch!" />
+    <meta name="twitter:title" content="👩🏻‍💻 Melissa Arroyo | Front End Developer" />
+    <meta name="twitter:description" content="Web designer and Front End Developer in Kansas City" />
     <meta name="twitter:url" content="https://melarroyo.com/" />
     <meta name="twitter:image" content="https://www.melarroyo.com/img/preview.png" />
 </head>
@@ -61,11 +59,10 @@
             </div>
         </div>
         <div id="work" class="container Work_Section p-1 p-md-5">
-            <div class="Work_SectionCard card-shpekc">SHPE KC</div>
-            <div class="Work_SectionCard card-srks">SUSAN</div>
-            <div class="Work_SectionCard card-trinity">Trinity</div>
-            <div class="Work_SectionCard card-reframe">ReFrame Financial</div>
-            <div class="Work_SectionCard card-cudlipp">Cuddlip Financial</div>
+            <div class="Work_SectionCard card-srks">Susan Ruiz for Kansas</div>
+            <div class="Work_SectionCard card-trinity">Reframe Financial</div>
+            <div class="Work_SectionCard card-trinity">Blueprint Financial</div>
+            <div class="Work_SectionCard card-trinity">Chris Herron for Lenexa</div>
         </div>
     </main>
     <footer class="Footer_Section py-2 container">
