--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <!-- BEGIN BODY -->
 <body>
     <header>
-        <nav class="container justify-content-end align-items-center pt-3">
-            <ul class="list-unstyled d-flex flex-row justify-content-evenly">
+        <nav>
+            <ul class="list-unstyled d-flex flex-row m-0">
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Send a Message</a></li>
@@ -39,33 +39,42 @@
     </header>
     <main class="col-12 d-flex flex-column">
         <div class="hero-section">
-            <img class="hero-sectionLogo" src="/img/header-logo.jpeg" alt="Logo"></img>
+            <img class="hero-sectionLogo" src="/img/hero-placeholder.jpg" alt="Logo"></img>
             <div class="hero-sectionContent">
                 <h1>Melissa Arroyo</h1>
-                <p>Wed Designer | Front End Developer</p>
-                <p>A collection of my work in web design, web development, and digital illustrations</p>
+                <h2>Wed Designer | Front End Developer</h2>
+                <p>A collection of my work in web design, web development, and digital illustrations.</p>
                 <ul class="list-unstyled d-flex">
                     <li class="hero-sectionBtn">
                         <a href="https://www.linkedin.com/in/arroyo-melissa/" target="_blank">
-                            Connect with me! <span>LI logo</span>
+                            Let's Connect <img class="li" src="/img/icon-social-linkedin.svg" alt="linkedin icon" />
                         </a>
                     </li>
                     <li class="hero-sectionBtn">
                         <a href="https://github.com/meliarr" target="_blank">
-                            Github <span>GH logo</span>
+                            Github <img class="gh" src="/img/icon-social-github.svg" alt="github icon" />
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-        <div id="work" class="container Work_Section p-1 p-md-5">
-            <div class="Work_SectionCard card-srks">Susan Ruiz for Kansas</div>
-            <div class="Work_SectionCard card-trinity">Reframe Financial</div>
+        <div id="work" class="Work_Section p-1 p-md-5">
+            <div class="Work_SectionCard card-srks col-11 d-flex">
+                <div class="Work_SectionContent col-lg-4 p-4">
+                    <h4>website design + development</h4>
+                    <h2>Susan Ruiz for Kansas</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-8 Work_SectionImage">
+                    <img src="img/portfolio-susan.png" alt="Susan Ruiz Homepage Design" />
+                </div>
+            </div>
+            <!-- <div class="Work_SectionCard card-trinity">Reframe Financial</div>
             <div class="Work_SectionCard card-trinity">Blueprint Financial</div>
-            <div class="Work_SectionCard card-trinity">Chris Herron for Lenexa</div>
+            <div class="Work_SectionCard card-trinity">Chris Herron for Lenexa</div> -->
         </div>
     </main>
-    <footer class="Footer_Section py-2 container">
+    <footer class="Footer_Section pt-3">
         <span>Website footer. Made by Me</span>
     </footer>
     <script src="scripts.js"></script>
