--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!-- Open Graph Data -->
     <meta property="og:url" content="https://melarroyo.com/" />
     <meta property="og:type" content="website" />
@@ -39,10 +42,9 @@
     </header>
     <main class="col-12 d-flex flex-column">
         <div class="hero-section">
-            <img class="hero-sectionLogo" src="/img/hero-placeholder.jpg" alt="Logo"></img>
             <div class="hero-sectionContent">
-                <h1>Melissa Arroyo</h1>
-                <h2>Wed Designer | Front End Developer</h2>
+                <h1 class="animate__animated animate__fadeIn">Melissa Arroyo</h1>
+                <h2>Web Designer | Front End Developer</h2>
                 <p>A collection of my work in web design, web development, and digital illustrations.</p>
                 <ul class="list-unstyled d-flex">
                     <li class="hero-sectionBtn">
