added portfolio content

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <div class="hero-section">
             <div class="hero-sectionContent">
                 <h1 class="animate__animated animate__fadeIn">Melissa Arroyo</h1>
-                <h2>Web Designer | Front End Developer</h2>
-                <p>A collection of my work in web design, web development, and digital illustrations.</p>
+                <h2>Web Designer, Front End Developer Based in Kansas City</h2>
                 <ul class="list-unstyled d-flex">
                     <li class="hero-sectionBtn">
                         <a href="https://www.linkedin.com/in/arroyo-melissa/" target="_blank">
@@ -62,18 +61,53 @@
         </div>
         <div id="work" class="Work_Section p-1 p-md-5">
             <div class="Work_SectionCard card-srks col-11 d-flex">
-                <div class="Work_SectionContent col-lg-4 p-4">
-                    <h4>website design + development</h4>
-                    <h2>Susan Ruiz for Kansas</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <div class="Work_SectionContent col-lg-4">
+                    <div class="Work_SectionTitle p-4">
+                        <h4>website design + development</h4>
+                        <h2>Susan Ruiz for Kansas</h2>
+                    </div>
+                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
                     <img src="img/portfolio-susan.png" alt="Susan Ruiz Homepage Design" />
                 </div>
             </div>
-            <!-- <div class="Work_SectionCard card-trinity">Reframe Financial</div>
-            <div class="Work_SectionCard card-trinity">Blueprint Financial</div>
-            <div class="Work_SectionCard card-trinity">Chris Herron for Lenexa</div> -->
+            <div class="Work_SectionCard card-srks col-11 d-flex">
+                <div class="Work_SectionContent col-lg-4">
+                    <div class="Work_SectionTitle p-4">
+                        <h4>website design + development</h4>
+                        <h2>Reframe Financial Planning</h2>
+                    </div>
+                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-8 Work_SectionImage">
+                    <img src="img/portfolio-reframe.png" alt="Reframe Homepage Design" />
+                </div>
+            </div>
+            <div class="Work_SectionCard card-srks col-11 d-flex">
+                <div class="Work_SectionContent col-lg-4">
+                    <div class="Work_SectionTitle p-4">
+                        <h4>website design</h4>
+                        <h2>Chris Herron for Lenexa</h2>
+                    </div>
+                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-8 Work_SectionImage">
+                    <img src="img/portfolio-herron.png" alt="Herron for Lenexa Homepage Design" />
+                </div>
+            </div>
+            <div class="Work_SectionCard card-srks col-11 d-flex">
+                <div class="Work_SectionContent col-lg-4">
+                    <div class="Work_SectionTitle p-4">
+                        <h4>website design + development</h4>
+                        <h2>Blueprint Financial Planning</h2>
+                    </div>
+                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-8 Work_SectionImage">
+                    <img src="img/portfolio-financial.png" alt="Blueprint Financial Homepage Design" />
+                </div>
+            </div>
         </div>
     </main>
     <footer class="Footer_Section pt-3">
