updated content and styles

--- a/index.html
+++ b/index.html
@@ -59,14 +59,18 @@
                 </ul>
             </div>
         </div>
-        <div id="work" class="Work_Section p-1 p-md-5">
+        <div id="work" class="Work_Section col-lg-8 mx-auto p-1 p-md-5">
             <div class="Work_SectionCard card-srks col-11 d-flex">
                 <div class="Work_SectionContent col-lg-4">
                     <div class="Work_SectionTitle p-4">
                         <h4>website design + development</h4>
                         <h2>Susan Ruiz for Kansas</h2>
                     </div>
-                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <div class="Work_SectionContent p-4">
+                        <p>Running for a second term in 2020, Susan needed a website that would help voters, donors, and volunteers get to know her.</p>
+                        <p>With a thoughtful approach for SEO, Accessibility, and UX, I put together a design that reflected her progressive values and celebrated the state of Kansas and the people of her district.</p>
+                        <p>Through her website, she was able to increase her digital reach to receive campaign donations, volunteer signups, and share her story. Susan won her re-election in 2020 and in 2022.</p>
+                    </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
                     <img src="img/portfolio-susan.png" alt="Susan Ruiz Homepage Design" />
@@ -78,7 +82,11 @@
                         <h4>website design + development</h4>
                         <h2>Reframe Financial Planning</h2>
                     </div>
-                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <div class="Work_SectionContent p-4">
+                        <p>Mary wanted a website that was inviting and reflective of her approach to financial planning: accessible, values-focused, and jargon-free.</p>
+                        <p>I used imagery that reflected her target audience living a meaningful and fulfilling retirement and organized the information in a way that would let visitors get to know her and her approach.</p>
+                        <p>This was built using HTML, CSS, and JavaScript on the Twenty Over Ten (now FMG) CMS platform for financial advisors.</p>
+                    </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
                     <img src="img/portfolio-reframe.png" alt="Reframe Homepage Design" />
@@ -90,7 +98,11 @@
                         <h4>website design</h4>
                         <h2>Chris Herron for Lenexa</h2>
                     </div>
-                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <div class="Work_SectionContent p-4">
+                        <p>Chris wanted a website that he and his campaign volunteers could easily update and manage to post events, press releases, and new content as his campaign prepares for the primary election on August 1, 2023.</p>
+                        <p>Using Adobe Illustrator, I created a design that highlighted his passion for Lenexa and introduces his vision for the city.</p>
+                        <p>The design was shared with a developer who built the site on WordPress using Elementor.</p>
+                    </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
                     <img src="img/portfolio-herron.png" alt="Herron for Lenexa Homepage Design" />
@@ -102,7 +114,10 @@
                         <h4>website design + development</h4>
                         <h2>Blueprint Financial Planning</h2>
                     </div>
-                    <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <div class="Work_SectionContent p-4">
+                        <p>Victor, a CERTIFIED FINANCIAL PLANNER™, wanted a website that visually communitcated his philosophy around financial planning that meets the needs of each individual who works with him.</p>
+                        <p>I built his site on the Twenty Over Ten Platform (acquired by FMG) using HTML and CSS. For interactivity and visual interest, I applied some CSS animations and JavaScript carousels.</p>
+                    </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
                     <img src="img/portfolio-financial.png" alt="Blueprint Financial Homepage Design" />
