updating about section and styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/frn1vgw.css">
+    <script src="https://kit.fontawesome.com/e70bdb6605.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -36,7 +37,7 @@
             <ul class="list-unstyled d-flex flex-row m-0">
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact">Send a Message</a></li>
+                <li><a href="mailto:hello@melarroyo.com">Send a Message</a></li>
             </ul>
         </nav>
     </header>
@@ -45,7 +46,7 @@
             <div class="hero-sectionContent">
                 <h1 class="animate__animated animate__fadeIn">Melissa Arroyo</h1>
                 <h2>Web Designer, Front End Developer Based in Kansas City</h2>
-                <ul class="list-unstyled d-flex">
+                <ul class="ButtonContainer">
                     <li class="hero-sectionBtn">
                         <a href="https://www.linkedin.com/in/arroyo-melissa/" target="_blank">
                             Let's Connect <img class="li" src="/img/icon-social-linkedin.svg" alt="linkedin icon" />
@@ -59,14 +60,20 @@
                 </ul>
             </div>
         </div>
-        <div id="work" class="Work_Section col-lg-8 mx-auto p-1 p-md-5">
-            <div class="Work_SectionCard card-srks col-11 d-flex">
+        <section id="work" class="Work_Section container">
+            <h2 class="SectionHeading">Selected Works</h2>
+            <div class="Work_SectionCard">
                 <div class="Work_SectionContent col-lg-4">
-                    <div class="Work_SectionTitle p-4">
+                    <div class="Work_SectionTitle">
                         <h4>website design + development</h4>
                         <h2>Susan Ruiz for Kansas</h2>
+                        <div class="work-sectionBtn">
+                            <a href="https://susanruizks.com/" target="_blank" rel="noreferrer">
+                                Visit Site <img class="gh" src="/img/icon-arrow.svg" alt="arrow icon" />
+                            </a>
+                        </div>
                     </div>
-                    <div class="Work_SectionContent p-4">
+                    <div class="Work_SectionInfo p-4">
                         <p>Running for a second term in 2020, Susan needed a website that would help voters, donors, and volunteers get to know her.</p>
                         <p>With a thoughtful approach for SEO, Accessibility, and UX, I put together a design that reflected her progressive values and celebrated the state of Kansas and the people of her district.</p>
                         <p>Through her website, she was able to increase her digital reach to receive campaign donations, volunteer signups, and share her story. Susan won her re-election in 2020 and in 2022.</p>
@@ -76,15 +83,20 @@
                     <img src="img/portfolio-susan.png" alt="Susan Ruiz Homepage Design" />
                 </div>
             </div>
-            <div class="Work_SectionCard card-srks col-11 d-flex">
+            <div class="Work_SectionCard">
                 <div class="Work_SectionContent col-lg-4">
-                    <div class="Work_SectionTitle p-4">
+                    <div class="Work_SectionTitle">
                         <h4>website design + development</h4>
                         <h2>Reframe Financial Planning</h2>
+                        <div class="work-sectionBtn">
+                            <a href="https://reframefp.com/" target="_blank" rel="noreferrer">
+                                Visit Site <img class="gh" src="/img/icon-arrow.svg" alt="arrow icon" />
+                            </a>
+                        </div>
                     </div>
-                    <div class="Work_SectionContent p-4">
-                        <p>Mary wanted a website that was inviting and reflective of her approach to financial planning: accessible, values-focused, and jargon-free.</p>
-                        <p>I used imagery that reflected her target audience living a meaningful and fulfilling retirement and organized the information in a way that would let visitors get to know her and her approach.</p>
+                    <div class="Work_SectionInfo p-4">
+                        <p>Inspired to help people live a meaningful retirement, Mary wanted a website that was inviting and reflective of her approach to financial planning: accessible, values-focused, and jargon-free.</p>
+                        <p>I used imagery that reflected her target audience living a fulfilling retirement and organized the information in a way that would let visitors get to know her and her approach.</p>
                         <p>This was built using HTML, CSS, and JavaScript on the Twenty Over Ten (now FMG) CMS platform for financial advisors.</p>
                     </div>
                 </div>
@@ -92,15 +104,20 @@
                     <img src="img/portfolio-reframe.png" alt="Reframe Homepage Design" />
                 </div>
             </div>
-            <div class="Work_SectionCard card-srks col-11 d-flex">
+            <div class="Work_SectionCard">
                 <div class="Work_SectionContent col-lg-4">
-                    <div class="Work_SectionTitle p-4">
+                    <div class="Work_SectionTitle">
                         <h4>website design</h4>
                         <h2>Chris Herron for Lenexa</h2>
+                        <div class="work-sectionBtn">
+                            <a href="https://herronforlenexa.com/" target="_blank" rel="noreferrer">
+                                Visit Site <img class="gh" src="/img/icon-arrow.svg" alt="arrow icon" />
+                            </a>
+                        </div>
                     </div>
-                    <div class="Work_SectionContent p-4">
-                        <p>Chris wanted a website that he and his campaign volunteers could easily update and manage to post events, press releases, and new content as his campaign prepares for the primary election on August 1, 2023.</p>
-                        <p>Using Adobe Illustrator, I created a design that highlighted his passion for Lenexa and introduces his vision for the city.</p>
+                    <div class="Work_SectionInfo p-4">
+                        <p>Inspired to run for the Lenexa City Council, Chris wanted a website that he and his campaign volunteers could easily update and manage to post events, press releases, and new content as his campaign prepares for the primary election on August 1, 2023.</p>
+                        <p>Using Adobe Illustrator, I created a design that visually aligned with his branding, highlighted his passion for Lenexa and introduces his vision for the city.</p>
                         <p>The design was shared with a developer who built the site on WordPress using Elementor.</p>
                     </div>
                 </div>
@@ -108,13 +125,18 @@
                     <img src="img/portfolio-herron.png" alt="Herron for Lenexa Homepage Design" />
                 </div>
             </div>
-            <div class="Work_SectionCard card-srks col-11 d-flex">
+            <div class="Work_SectionCard">
                 <div class="Work_SectionContent col-lg-4">
-                    <div class="Work_SectionTitle p-4">
+                    <div class="Work_SectionTitle">
                         <h4>website design + development</h4>
                         <h2>Blueprint Financial Planning</h2>
+                        <div class="work-sectionBtn">
+                            <a href="https://blueprintfinancialservices.com/" target="_blank" rel="noreferrer">
+                                Visit Site <img class="gh" src="/img/icon-arrow.svg" alt="arrow icon" />
+                            </a>
+                        </div>
                     </div>
-                    <div class="Work_SectionContent p-4">
+                    <div class="Work_SectionInfo p-4">
                         <p>Victor, a CERTIFIED FINANCIAL PLANNER™, wanted a website that visually communitcated his philosophy around financial planning that meets the needs of each individual who works with him.</p>
                         <p>I built his site on the Twenty Over Ten Platform (acquired by FMG) using HTML and CSS. For interactivity and visual interest, I applied some CSS animations and JavaScript carousels.</p>
                     </div>
@@ -123,10 +145,29 @@
                     <img src="img/portfolio-financial.png" alt="Blueprint Financial Homepage Design" />
                 </div>
             </div>
-        </div>
+        </section>
+        <section id="about" class="About_Section container">
+            <div class="col-lg-6">
+                <h2 class="SectionHeading">Do Something Powerful</h2>
+                <p>You are on a mission to inspire change and empower your community. Does your online presence creatively reflect that? I work with organizations who wish to elevate their mission via digital design: from building compelling, user-friendly websites to designing impactful digital content. <a href="mailto:hello@melarroyo.com">Let&apos;s discuss</a> how to set up an online platform for your cause.</p>
+                <h3>tech stack</h3>
+                <ul class="About_SectionList">
+                    <li><i class="fa-brands fa-html5"></i> HTML5</li>
+                    <li><i class="fa-solid fa-wand-magic-sparkles"></i> CSS3, Bootstrap, Tailwind</li>
+                    <li><i class="fa-brands fa-square-js"></i> JavaScript, ES6</li>
+                    <li><i class="fa-brands fa-react"></i> ReactJS</li>
+                    <li><i class="fa-solid fa-code-branch"></i> Git, Github, Gitlab</li>
+                    <li><i class="fa-brands fa-wordpress"></i> WordPress, Elementor</li>
+                </ul>
+            </div>
+            <div class="col-lg-6 d-flex justify-content-center">
+                <img class="AboutPhoto" src="img/home-img.jpg" alt="Photo of Melissa typing on her laptop" />
+                <div class="AboutPhoto_Overlay"></div>
+            </div>
+        </section>
     </main>
     <footer class="Footer_Section pt-3">
-        <span>Website footer. Made by Me</span>
+        <span>&copy; 2023 Melissa Arroyo</span>
     </footer>
     <script src="scripts.js"></script>
 </body>
