updated og img in meta data

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="👩🏻‍💻 Melissa Arroyo | Front End Developer" />
     <meta property="og:description" content="Web designer and Front End Developer in Kansas City" />
-    <meta property="og:image" content="https://www.melarroyo.com/img/preview.png" />
+    <meta property="og:image" content="https://www.melarroyo.com/img/og-img.png" />
 
     <!-- Twitter Card Data -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="👩🏻‍💻 Melissa Arroyo | Front End Developer" />
     <meta name="twitter:description" content="Web designer and Front End Developer in Kansas City" />
     <meta name="twitter:url" content="https://melarroyo.com/" />
-    <meta name="twitter:image" content="https://www.melarroyo.com/img/preview.png" />
+    <meta name="twitter:image" content="https://www.melarroyo.com/img/og-img.png" />
 </head>
 <!-- BEGIN BODY -->
 <body>
