--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="hero-section">
             <div class="hero-sectionContent">
                 <h1 class="animate__animated animate__fadeIn">Melissa Arroyo</h1>
-                <h2>Web Designer, Front End Developer Based in Kansas City</h2>
+                <h2>Web Designer, Front End Developer Based in Kansas City.</h2>
                 <ul class="ButtonContainer">
                     <li class="hero-sectionBtn">
                         <a href="https://www.linkedin.com/in/arroyo-melissa/" target="_blank">
